[package]
name = "nowo"
version = "0.0.1"
edition = "2021"
authors = ["nowo<z8888788@163.com>"]
repository = "https://github.com/nowo/rust-hello"
description = "A hello world program in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/nowo/rust-hello"
documentation = "https://docs.rs/nowo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
